fix z-index orders

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -66,7 +66,6 @@ h2 {
         size: cover;
     }
     height: 100vh;
-    z-index: -1;
     position: relative;
 }
 
@@ -151,7 +150,7 @@ h2 {
 .header-section--btn {
     position: relative;
     z-index: 1;
-    margin-top: 50px;
+    margin-top: 30px;
     i {
         font-size: 16px;
     }
